show products (hard coded)

--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -10,3 +10,12 @@
     background-color: #cbd5e0;
     border-radius: 50%;
 }
+.product-list{
+    margin: 2rem;
+    .card{
+        align-items: center;
+    }
+    img{
+        max-width: 250px;
+    }
+}
