--- a/public/css/main.css
+++ b/public/css/main.css
@@ -33,3 +33,13 @@ html {
   background-color: #cbd5e0;
   border-radius: 50%;
 }
+
+.product-list {
+  margin: 2rem;
+}
+.product-list .card {
+  align-items: center;
+}
+.product-list img {
+  max-width: 250px;
+}
