form add in landing page

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -43,3 +43,8 @@ html {
 .product-list img {
   max-width: 250px;
 }
+.product-list .card-footer {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
